// Especifica la versi칩n de la sintaxis de Protocol Buffers.
syntax = "proto3";

// Define el paquete de Go que se generar치. Evita colisiones de nombres.
option go_package = "michael-sys/proto";
package mensaje;

// El servicio "Greeter" define un conjunto de funciones remotas.
service Mission {
  // Nuestra funci칩n remota. Recibe un HelloRequest y devuelve un HelloResponse.
  rpc Oferta (MissionRequest) returns (MissionResponse);
  rpc ConfirmMission (ConfirmRequest) returns (ConfirmResponse);
  rpc Distraccion(DistraccionRequest) returns (DistraccionResponse);
  rpc Golpe(GolpeRequest) returns (GolpeResponse);
  rpc NotificarEstrellas(AvisoRequest) returns (AvisoResponse);
  rpc NotificarGolpe(ConfirmRequest) returns (ConfirmResponse);
  rpc ConfirmacionPago(PagoRequest) returns (PagoResponse);
}

message AvisoRequest {
  string pj = 1;
  int32 riesgo = 2;
  int32 turnos = 3;
}

message AvisoResponse {
}

// El mensaje de solicitud. Contiene el nombre de la persona a saludar.
message MissionRequest {
  int32 rechazo = 1;
}

// El mensaje de respuesta. Contendr치 el saludo final.
message MissionResponse {
  bool  disp = 1;
  string botin = 2;
  string prob_f = 3;
  string prob_t = 4;
  string riesgo = 5;
}

message ConfirmRequest {
  bool conf = 1;
}

message ConfirmResponse {}

message DistraccionRequest {
  int32 turnos = 1;
}

message DistraccionResponse {
  bool confirmacion = 1;
}

message GolpeRequest {
  int32 turnos = 1;
}

message GolpeResponse {
  bool confirmacion = 1;
  int32 botinExtra = 2;
  string razon = 3;
}


message PagoRequest {
  bool victoria = 1;
  string fase = 2;
  string who = 3;
}
message PagoResponse {
  string msj = 1;
}